--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h1 {
     margin-top: 10px;
     justify-content: center;
 }
+
 .container {
     max-width: 800px;
     margin: 20px auto;
@@ -47,10 +48,26 @@ h1 {
     padding: 10px 20px;
     font-size: 18px;
     cursor: pointer;
+    transition: background-color 0.3s ease; /* Smooth button hover effect */
 }
 
 #generate-button:hover {
     background-color: #555;
+}
+
+#cancel-button {
+    background-color: #555;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    display: none; /* Initially, hide the cancel button */
+    transition: background-color 0.3s ease; /* Smooth button hover effect */
+}
+
+#cancel-button:hover {
+    background-color: #777;
 }
 
 #output {
@@ -76,9 +93,9 @@ li {
     font-size: 16px;
     font-weight: bold;
     color: #333;
-  }
-  
-  #loading-icon {
+}
+
+#loading-icon {
     display: none; /* Initially, hide the loading icon */
     width: 30px;
     height: 30px;
@@ -87,9 +104,9 @@ li {
     border-radius: 50%;
     animation: spin 2s linear infinite;
     margin: 0 auto; /* Center the loading icon horizontally */
-  }
-  
-  @keyframes spin {
+}
+
+@keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }
+}
